# archivage-affaires

./: README.md  ajouter_dossier_archivage.py  app.py  executer_archivage.py  requirements.txt  test.py  utils.py
tkinter_custom_classes_ndm_module/: pyproject.toml
tkinter_custom_classes_ndm_module/tkinter_custom_classes_ndm/: __init__.py  utils.py
tkinter_custom_classes_ndm_module/tkinter_custom_classes_ndm/tkinter_custom_classes_ndm.egg-info/: PKG-INFO  SOURCES.txt
