[project]
name = "tkinter_custom_classes_ndm"
version = "0.1.0"
description = "Un ensemble de classes utilitaires personnelles héritées de tkiner et tkinter.ttk"
authors = [
    { name="Nathan Di Martino", email="nathan.dimartino@qmt-group.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["tkinter_custom_classes_ndm"]